tests/errors/for_non_iterable.py
# expect_error: TypeError
for x in 3:
    print(x)